# eqxCLIP

./: .gitignore  main.py  pyproject.toml  test.py  testing_ground.ipynb  testing_ground2.ipynb
eqxclip/: model.py
jaxclip/: clip.py  model.py
jaxclip/utils/: pytorch_to_eqx_loading_utils.py
