[tool.poetry]
name = "eqxclip"
version = "0.1.0"
description = ""
authors = ["Artur A. Galstyan <galstyan.artu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.20"
equinox = "^0.11.2"
matplotlib = "^3.8.2"
jaxlib = "^0.4.20"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length=80

[tool.ruff.lint]
ignore=["F722"]
